# pelican-jupyter-reader

./: .gitignore  CONTRIBUTING.md  README.md  netlify.toml  pyproject.toml  tasks.py
demo/: .gitignore  demo.tpl  pelicanconf.py  requirements.txt  tasks.py
demo/content/: sample-notebook.ipynb
demo/demo/: index.html.j2
pelican/plugins/pelican_jupyter_reader/: __init__.py  pelican_jupyter_reader.py
