[tool.poetry]
name = "pelican-jupyter-reader"
version = "0.1.7"
description = "Reader for ipynb files"
authors = ["Chuck Pepe-Ranney <chuck.peperanney@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pelican", "plugin", "jupyter"]
repository = "https://github.com/chuckpr/pelican-jupyter-reader"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Documentation" = "https://docs.getpelican.com/"
"Funding" = "https://donate.getpelican.com/"
"Source" = "https://github.com/chuckpr/pelican-jupyter-reader"
"Tracker" = "https://github.com/chuckpr/pelican-jupyter-reader/issues"

[tool.poetry.dependencies]
python = "^3.6"
pelican = "^4.2"
markdown = {version = "^3.1.1",optional = true}
nbconvert = "^5.6.1"
nbformat = "^4.4.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0",allow-prereleases = true}
flake8 = "^3.7"
flake8-black = "^0.1.0"
invoke = "^1.3"
isort = "^4.3"
livereload = "^2.6"
markdown = "^3.1.1"
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.2"
Werkzeug = "^0.15.5"
rope = "^0.14.0"
jupyterlab = "^1.2.4"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
